@@ -563,6 +563,10 @@ inline int snprintf(char* buf, int len, char const* fmt, ...)
 #define TORRENT_HAS_STRDUP 1
 #endif
 
+#ifndef TORRENT_HAS_BOOST_UNORDERED
+#define TORRENT_HAS_BOOST_UNORDERED 1
+#endif
+
 #if !defined TORRENT_IOV_MAX
 #ifdef IOV_MAX
 #define TORRENT_IOV_MAX IOV_MAX
